--- a/style.css
+++ b/style.css
@@ -49,16 +49,28 @@ main .main-content .path {
 main .main-content .path a:hover {
   text-decoration: underline;
 }
+.swiper {
+  display: block;
+  width: 80%;
+}
 
-main .product-images {
+span.swiper-pagination-bullet {
+  background-color: #fff;
+}
+
+/* main .swiper-wrapper {
   display: flex;
   flex-direction: column;
   gap: 5px;
   margin: 0 5px;
+} */
+
+main .swiper-wrapper img {
+  width: 100%;
 }
 
-main .product-images img {
-  width: 100%;
+main .main-content .product-img-desktop {
+  display: none;
 }
 
 main .column-details {
@@ -103,18 +115,32 @@ main .column-details .miniature-image button {
   border: none;
 }
 
+main .column-details .miniature-image button:hover {
+  border: 2px solid #000;
+}
+
 main .column-details .size-guide {
   padding: 30px;
 }
 
 main .column-details .size-guide button {
   background-color: transparent;
-  padding: 10px 15px;
+  padding: 10px 20px;
   border: 1px solid gray;
+  font-size: 25px;
+  margin: 8px;
 }
 
 main .column-details .size-guide button:hover {
   border: 2px solid #000;
+}
+
+main .column-details .size-info {
+  display: none;
+  padding: 10px;
+  text-decoration: underline;
+  border: 1px solid #000;
+  margin: 0 20px;
 }
 
 main .column-details .add-to-cart {
@@ -132,10 +158,10 @@ main .column-details .add-to-cart button {
 /*********** MEDIA QUERY *************/
 
 @media only screen and (min-width: 424px) and (max-width: 767px) {
-  main .product-images {
+  /* main .product-images {
     display: grid;
     grid-template-columns: 1fr 1fr;
-  }
+  } */
 
   main .column-details {
     margin-left: 20px;
@@ -144,11 +170,10 @@ main .column-details .add-to-cart button {
 
 @media only screen and (min-width: 768px) and (max-width: 2560px) {
   nav .menu ul {
-    display: block;
     display: flex;
     flex-direction: row;
-    gap: 10px;
-    text-transform: uppercase;
+    gap: 20px;
+    font-size: 20px;
   }
 
   nav .menu ul li:hover {
@@ -164,8 +189,25 @@ main .column-details .add-to-cart button {
     margin-top: 50px;
   }
 
-  main .product-images {
+  main .swiper {
+    display: none;
+  }
+
+  main .main-content .product-img-desktop {
     display: grid;
+    grid-template-rows: 1fr 1fr;
     grid-template-columns: 1fr 1fr;
+    margin-left: 10px;
+    gap: 5px;
+  }
+
+  main .main-content .product-img-desktop img {
+    width: 100%;
+  }
+
+  main .column-details .size-guide button {
+    font-size: 15px;
+    padding: 10px 15px;
+    margin: 2px;
   }
 }
