--- a/style.css
+++ b/style.css
@@ -11,6 +11,13 @@ a {
   color: #000;
 }
 
+label {
+  display: none;
+  padding: 20px;
+  color: brown;
+  margin-left: 10px;
+}
+
 /************* NAV ***************/
 nav {
   display: flex;
@@ -99,23 +106,26 @@ main .column-details .details a:hover {
   text-decoration: underline;
 }
 
-main .column-details .miniature-image {
+main .column-details .select-color {
   display: flex;
   flex-direction: row;
   gap: 10px;
   margin-left: 50px;
 }
 
-main .column-details .miniature-image img {
+main .column-details .select-color img {
   width: 50px;
 }
 
-main .column-details .miniature-image button {
+main .column-details .select-color button {
   appearance: none;
   border: none;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
-main .column-details .miniature-image button.active {
+main .column-details .select-color button.active {
   border: 2px solid #000;
 }
 
@@ -153,6 +163,11 @@ main .column-details .add-to-cart button {
   color: white;
   padding: 20px 40px;
   text-transform: uppercase;
+}
+
+main .column-details .add-to-cart button:active {
+  background-color: gray;
+  border: none;
 }
 
 /*********** MEDIA QUERY *************/
